# comic-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.ja.md  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json
client/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
client/src/: App.svelte  app.html  global.sass
client/src/lib/: api.js  config.js  fetcher.js  hold-repeat.svelte.js  levels.js  parse.js  reload-on-focus.svelte.js  router.svelte.js  toast.svelte.js
client/src/lib/components/: DeleteConfirm.svelte  Header.svelte  Icon.svelte  ReviewStars.svelte  Toast.svelte
client/src/pages/: Bookshelf.svelte  Brand.svelte  Comic.svelte  Home.svelte
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/comics/[id]/: +page.svelte
docs/: DESIGN.md  api.md  development.md  docker-compose.md  reverse-proxy.md
prisma/: schema.prisma
scripts/: fix-filenames.ts  resize-images.sh  upscale-images.sh
src/: app.ts  base-path.test.ts  config.rs  db.rs  error.rs  index.ts  init.rs  main.rs  models.rs  types.d.ts
src/db/: index.ts  schema.ts
src/helpers/: mod.rs  natural_sort.rs  normalize_brackets.rs  parse_comic_name.rs  sanitize_filename.rs
src/lib/: config.ts  db.ts  init.ts  normalize-brackets.ts  parse-comic-name.ts  sanitize-filename.ts  spa.ts
src/routes/: bookshelves.rs  bookshelves.ts  brands.rs  brands.ts  comics.rs  comics.ts  duplicates.rs  duplicates.ts  images.rs  mod.rs  regist.ts  register.rs  register.ts  spa.rs  upscale.ts
src/test/: setup.ts
(+2 files in other folders)
