[package]
name = "comic-server"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }
mime_guess = "2"
walkdir = "2"
natord = "1"
regex = "1"
urlencoding = "2"
parking_lot = "0.12"
